# jules

./: AGENTS.md  Dockerfile  README.md  app.py  dataset.txt  pyproject.toml
src/: app.py
src/face_generator_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
